[package]
name = "QMem"
version = "0.1.3"
authors = ["Aashish BishowKarma aashishbishowkarma@outlook.com"]
edition = "2024"
description = "A quantum-inspired memory simulation library in Rust that allows bits to exist in superposition."
license = "MIT"
repository = "https://github.com/aashishbishow/QMem"
documentation = "https://docs.rs/qmem"
keywords = ["qbits"]
categories = ["science"]

[dependencies]
rand = "0.9.0"
